--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://master.dl.sourceforge.net/project/testbuildss/daisy/ion-2.9.a-EOL-daisy-20200823-1246-UNOFFICIAL-Preview.zip
-  ROM_NAME: Generic
-  ZIP_NAME: IonOS
+  ROM_URL: https://bigota.d.miui.com/V10.3.8.0.PDMMIXM/miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0.zip
+  ROM_NAME: MIUI
+  ZIP_NAME: MIUI10
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
