--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://www.androidfilehost.com/?fid=8889791610682934541
+  ROM_URL: https://bigota.d.miui.com/V10.3.8.0.PDMMIXM/miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0.zip
   ROM_NAME: MIUI
-  ZIP_NAME: MIUIPlus
+  ZIP_NAME: HM6ProINGLOBAL
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
