--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V10.3.8.0.PDMMIXM/miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0.zip
+  ROM_URL: https://get.resurrectionremix.com/ten/j6primelte/RROS-Q-8.6.1-20201004-j6primelte-Official.zip
   ROM_NAME: MIUI
   ZIP_NAME: HM6ProINGLOBAL
   TZ: Asia/Kolkata
