--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,7 +14,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://hugeota.d.miui.com/V12.0.2.0.PDMMIXM/miui_HM6ProINGlobal_V12.0.2.0.PDMMIXM_fb255b4239_9.0.zip
+  ROM_URL: http://bigota.d.miui.com/V12.0.2.0.PEFMIXM/miui_HMS2Global_V12.0.2.0.PEFMIXM_668a87d737_9.0.zip
   ROM_NAME: MIUI
   ZIP_NAME: HM6ProMIUI12
   TZ: Asia/Kolkata
