--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://sourceforge.net/projects/pixelextended/files/Wayne/PixelExtended_wayne-11-20201103-0329-OFFICIAL.zip/download
-  ROM_NAME: MIUI
+  ROM_NAME: Pixel Extended
   ZIP_NAME: PixelGSISamsungA6
   TZ: Asia/Kolkata
   MIR: wet
