--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://sourceforge.net/projects/pixelextended/files/Wayne/PixelExtended_wayne-11-20201103-0329-OFFICIAL.zip/download
+  ROM_URL: https://sourceforge.net/projects/pixelextended/files/Whyred/PixelExtended_whyred-11-20201019-0038-OFFICIAL.zip/download
   ROM_NAME: Pixel Extended
-  ZIP_NAME: PixelGSISamsungA6
+  ZIP_NAME: PixelExtended_daisy-11-2020118-0016-OFFICIAL
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
