--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://sourceforge.net/projects/pixelextended/files/Whyred/PixelExtended_whyred-11-20201019-0038-OFFICIAL.zip
-  ROM_NAME: Pixel Extended
-  ZIP_NAME: PixelExtended_daisy-11-2020118-0016-OFFICIAL
+  ROM_URL: https://bigota.d.miui.com/V12.0.4.0.PDMMIXM/miui_HM6ProINGlobal_V12.0.4.0.PDMMIXM_ad48898cf1_9.0.zip
+  ROM_NAME: MIUI
+  ZIP_NAME: miui_HM6ProINGlobal_V12.0.4.0.PDMMIXM_ad48898cf1_9.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
