--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.4.0.PDMMIXM/miui_HM6ProINGlobal_V12.0.4.0.PDMMIXM_ad48898cf1_9.0.zip
+  ROM_URL: https://bigota.d.miui.com/20.11.19/miui_LAVENDER_20.11.19_35b6e5c2ca_10.0.zip
   ROM_NAME: MIUI
-  ZIP_NAME: miui_HM6ProINGlobal_V12.0.4.0.PDMMIXM_ad48898cf1_9.0
+  ZIP_NAME: BurkayGSI_miui_LAVENDER_20.11.19_35b6e5c2ca_10.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
