--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/20.11.19/miui_LAVENDER_20.11.19_35b6e5c2ca_10.0.zip
+  ROM_URL: https://sourceforge.net/projects/xiaomi-eu-multilang-miui-roms/files/xiaomi.eu/MIUI-STABLE-RELEASES/MIUIv10/xiaomi.eu_multi_HM6Pro_V10.3.4.0.PDICNXM_v10-9.zip/download
   ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_miui_LAVENDER_20.11.19_35b6e5c2ca_10.0
+  ZIP_NAME: BurkayGSI_xiaomi.eu_multi_HM6Pro_V10.3.4.0.PDICNXM_v10-9
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
