--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://netix.dl.sourceforge.net/project/xiaomi-eu-multilang-miui-roms/xiaomi.eu/MIUI-STABLE-RELEASES/MIUIv10/xiaomi.eu_multi_HM6Pro_V10.3.4.0.PDICNXM_v10-9.zip?viasf=1
-  ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_xiaomi.eu_multi_HM6Pro_V10.3.4.0.PDICNXM_v10-9
+  ROM_URL: https://bigota.d.miui.com/V11.0.12.0.QDLMIXM/miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0.zip
+  ROM_NAME: Pure Android
+  ZIP_NAME: BurkayGSI_miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
