--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -15,7 +15,7 @@ on:
     
 env:
   ROM_URL: https://bigota.d.miui.com/V11.0.12.0.QDLMIXM/miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0.zip
-  ROM_NAME: Pure Android
+  ROM_NAME: MIUI
   ZIP_NAME: BurkayGSI_miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0
   TZ: Asia/Kolkata
   MIR: wet
