--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V11.0.12.0.QDLMIXM/miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0.zip
+  ROM_URL: http://bigota.d.miui.com/20.11.24/miui_LAVENDER_20.11.24_3b9a2eb548_10.0.zip
   ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_miui_DAISYGlobal_V11.0.12.0.QDLMIXM_1e8d0d76bb_10.0
+  ZIP_NAME: BurkayGSI_miui_LAVENDER_20.11.24_3b9a2eb548_10.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
