--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: http://bigota.d.miui.com/20.11.24/miui_LAVENDER_20.11.24_3b9a2eb548_10.0.zip
-  ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_miui_LAVENDER_20.11.24_3b9a2eb548_10.0
+  ROM_URL: https://get.mirror1.arrowos.net/download.php?token=sQDuCGK0SRnXoHed8NfIpmxVBFh14aMgWU5iJczlE7OyqtTr9wjkAPv63Y2b&version=arrow-10.0&variant=official&device=whyred
+  ROM_NAME: Generic
+  ZIP_NAME: BurkayGSI_ArrowOS_10.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
