--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V12.0.1.0.QFGINXM/miui_LAVENDERINGlobal_V12.0.1.0.QFGINXM_47a316efa3_10.0.zip
+  ROM_URL: https://bigota.d.miui.com/V10.3.8.0.PDMMIXM/miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0.zip
   ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_miui_LAVENDERINGlobal_V12.0.1.0.QFGINXM_47a316efa3_10.0
+  ZIP_NAME: BurkayGSI_miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
