--- a/.github/workflows/makegsi.yml
+++ b/.github/workflows/makegsi.yml
@@ -14,9 +14,9 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://bigota.d.miui.com/V10.3.8.0.PDMMIXM/miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0.zip
+  ROM_URL: https://androidfilehost.com/?fid=6006931924117923999
   ROM_NAME: MIUI
-  ZIP_NAME: BurkayGSI_miui_HM6ProINGlobal_V10.3.8.0.PDMMIXM_e536e6effd_9.0
+  ZIP_NAME: BurkayGSI_miui_HM6ProEU_V10.3.4.0.PDMCNXM_e536e6effd_9.0
   TZ: Asia/Kolkata
   MIR: wet
 jobs:
